Changes in beta release 2.3.10

* Fixed build problem without shape extension.

* New FvwmIconBox option: FvwmIconBoxUseSkipList.

* FvwmBacker is page aware.

* New 'flat' and 'sunk' options to BorderStyle command.

* New commands DefaultColorset and HilightColorset.

* FvwmBacker is now page-aware, a new configuration syntax.

* New styles TitleAtBottom and TitleAtTop.

* FvwmIconBox, FvwmIconMan, FvwmTaskBar and FvwmWinList support animatation via
  FvwmAnimate.

* New command StrokeFunc to handle mouse stroke.

* The default root cursor, unless specified otherwise, is now left pointer.

* New command BusyCursor to control a busy cursor during execution of
  certain commands.

* CursorStyle can set the root cursor and use X11 cursor name.

* New command EscapeFunc to configure an aborting key sequence
  (default is Ctrl-Alt-Escape).

* New command HideGeometryWindow to hide the size/position when moving or
  resizing windows.

* New options for the WindowList command: UseListSkip and OnlySkipList.

* New FvwmPager options SolidSeparators and NoSeparators.

Changes in beta release 2.3.9 (October 1999)

* Color names from colorsets can be used in fvwm command ($[fg.cs<n>],
  $[bg.cs<n>], $[hilite.cs<n>] and $[shadow.cs<n>]).

* FvwmScript supports colorsets.

* FvwmTaskBar supports colorsets with the options Colorset, IconColorset and
  TipsColorset.

* New function variable $v.

* Menus can use colorsets with the new MenuStyle options MenuColorset,
  ActiveColorset and GreyedColorset.

Changes in beta release 2.3.8 (September 1999)

* New Style options ResizeOpaque and ResizeOutline.

* A long-awaited new default FvwmBanner logo.

* RaiseTransient no longer flips main above/below already raised transients.
  New style FlipTransient turns flipping back on, and additionally does a
  similar job for LowerTransient at the bottom of the layer.
  New style StackTransientParent augments Raise/LowerTransient.
